main.tf
provider "aws" {
  region = "us-east-1"  # Specify your desired region
}

resource "aws_instance" "jenkins_server" {
  ami           = "ami-04a81a99f5ec58529"  # Replace with a valid Ubuntu AMI ID
  instance_type = "t2.micro"
  key_name      = "poc"  # Replace with your EC2 key pair name

  security_groups = [aws_security_group.jenkins_sg.name]

  tags = {
    Name = "Jenkins-Server"
  }

  provisioner "remote-exec" {
    inline = [
      "sudo apt update -y",
      "sudo apt upgrade -y",
      "sudo apt install openjdk-11-jdk -y",
      "sudo apt-get install -y apache2",
      "sudo wget -O /usr/share/keyrings/jenkins-keyring.asc https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key",
      "echo 'deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian-stable binary/' | sudo tee /etc/apt/sources.list.d/jenkins.list > /dev/null",
      "sudo apt-get update -y",
      "sudo apt-get install jenkins -y",
      "sudo apt-get install systemd -y",
      "sudo systemctl start apache2",
      "sudo systemctl start apache2",
      "sudo systemctl start jenkins",
      "sudo systemctl enable jenkins"
    ]

    connection {
      type        = "ssh"
      user        = "ubuntu"  # Use "ec2-user" for Amazon Linux, "ubuntu" for Ubuntu
      private_key = file("poc.pem")  # Path to your private key
      host        = self.public_ip
    }
  }
}

resource "aws_security_group" "jenkins_sg" {
  name        = "jenkins_sg"
  description = "Allow SSH and Jenkins"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # Restrict IP range as needed
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # Restrict IP range as needed
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "jenkins_url" {
  value       = "http://${aws_instance.jenkins_server.public_ip}:8080"
  description = "URL to access Jenkins"
}
